API documentation updated, classe routes and controller added
