# models/enseignant.js
@@ -3,6 +3,8 @@ const mongoose = require('mongoose');
 const enseignantSchema = new mongoose.Schema({
   nom: { type: String, required: true },
   prenom: { type: String, required: true },
+  // Référence à l'etablissement auquel l'enseignant appartient
+  etablissement: [{ type: mongoose.Schema.Types.ObjectId, ref: 'Etablissement', required: true }],
   // Autres informations relatives à l'enseignant
 });
 
